# Onchain-AI-agent

./: .gitignore  README.md
Streamlit/: agent_bridge.py  app.py  output_handler.py  requirements.txt
Streamlit/outputs/: onchain_intelligence_report.md
onchain_agent/: .env.example  README.md  pyproject.toml
onchain_agent/outputs/: onchain_intelligence_report.md
onchain_agent/src/onchain_agent/: crew.py  main.py
onchain_agent/src/onchain_agent/config/: agents.yaml  tasks.yaml
onchain_agent/src/onchain_agent/tools/: __init__.py  app_transactions_tool.py  portfolio_tool.py  search_tool.py  token_price_tool.py  transaction_details_tool.py  transaction_history_tool.py  zapper_base.py
