[project]
name = "onchain_agent"
version = "0.1.0"
description = "onchain_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "requests>=2.31.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0"
]

[project.scripts]
onchain_agent = "onchain_agent.main:run"
run_crew = "onchain_agent.main:run"
train = "onchain_agent.main:train"
replay = "onchain_agent.main:replay"
test = "onchain_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
